2003-06-11  Tim Coleman <tim@timcoleman.com>
	* SybaseConnection.cs:
		Make connection parameter parsing "more correct"
		and throw appropriate exceptions, similar to MS SqlClient
	* SybaseBinary.cs:
	* SybaseBoolean.cs:
	* SybaseByte.cs:
	* SybaseDateTime.cs:
	* SybaseDecimal.cs:
	* SybaseDouble.cs:
	* SybaseMoney.cs:
	* SybaseString.cs:
		Mass import of code from SqlClient to make this behave
		better.

2003-02-16  Daniel Morgan <danmorg@sc.rr.com>

	* SybaseConnection.cs: - parse data source for 2 possible uses:
	"Server=hostname", 
	"Server=hostname,port" and open the connection based on the
	resulting server name and port.  

2002-12-01  Tim Coleman <tim@timcoleman.com>
        * Mono.Data.SybaseClient/SybaseDataReader.cs:
                Change to reflect TdsSchemaInfo -> TdsDataColumnCollection
                shift.

2002-11-26  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.SybaseClient.build:
		Copy dll into Test directory.
	* Mono.Data.SybaseClient/SybaseCommand.cs:
	* Mono.Data.SybaseClient/SybaseConnection.cs:
	* Mono.Data.SybaseClient/SybaseParameter.cs:
	* Mono.Data.SybaseClient/SybaseParameterCollection.cs:
	* Mono.Data.SybaseClient/SybaseTransaction.cs:
		Many changes around making PREPAREs work in
		Sybase as well as SQL Server.

2002-11-21  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.SybaseClient.build:
	* Mono.Data.SybaseClient/SybaseCommand.cs:
	* Mono.Data.SybaseClient/SybaseConnection.cs:
	* Mono.Data.SybaseClient/SybaseConnectionPool.cs:
	* Mono.Data.SybaseClient/SybaseDataReader.cs:
	* Mono.Data.SybaseClient/SybaseException.cs:
	* Mono.Data.SybaseClient/SybaseInfoMessageEventArgs.cs:
	* Mono.Data.SybaseClient/SybaseParameter.cs:
	* Mono.Data.SybaseClient/SybaseTransaction.cs:
	* Mono.Data.SybaseTypes/SybaseDecimal.cs:
		Modify to accept new Mono.Data.Tds.Protocol
		namespace in Mono.Data.Tds assembly, replacing
		Mono.Data.TdsClient.Internal

2002-11-19  Tim Coleman <tim@timcoleman.com>
	* Mono.Data.SybaseClient/SybaseCommand.cs: