@@ -1,3 +1,9 @@
+2003-07-17  Peter Williams  <peter@newton.cx>
+
+	* Mono.Data.SybaseTypes/SybaseDecimal.cs: csc.exe is more
+	stringent about namespaces than mcs. We need to disambiguate
+	System.Math from Mono.Math here.
+
 2003-06-11  Tim Coleman <tim@timcoleman.com>
 	* SybaseConnection.cs:
 		Make connection parameter parsing "more correct"
